# ChangeLog for x11-drivers/nvidia-drivers
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*nvidia-drivers-180.60 (14 May 2009)

  14 May 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
  +nvidia-drivers-180.60.ebuild:
  new prerelease driver

*nvidia-drivers-185.18.08 (08 May 2009)

  08 May 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
  -nvidia-drivers-185.13.ebuild, +nvidia-drivers-185.18.08.ebuild:
  new beta driver :D removed old 185.13

*nvidia-drivers-180.53 (25 Apr 2009)

  25 Apr 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
  +nvidia-drivers-180.53.ebuild:
  added prerelease 180.53

*nvidia-drivers-185.18.04 (24 Apr 2009)

  24 Apr 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
  +nvidia-drivers-185.18.04.ebuild:
  new beta nvidia driver. yes, its newer than 185.19, go figure =]

  15 Apr 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
  -nvidia-drivers-180.41.ebuild:
  in tree

*nvidia-drivers-185.19 (06 Apr 2009)

  06 Apr 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
  +nvidia-drivers-185.19.ebuild:
  version bump for 185.19 ::
  http://www.nvnews.net/vbulletin/showthread.php?p=1976912

*nvidia-drivers-185.13 (25 Mar 2009)

  25 Mar 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
  +nvidia-drivers-185.13.ebuild:
  ebuild for 185.13

*nvidia-drivers-180.41 (22 Mar 2009)

  22 Mar 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
  +files/09nvidia, +files/nvidia-2.6.28.patch, +files/nvidia-169.07,
  +files/NVIDIA_glx-defines.patch, +files/NVIDIA_glx-glheader.patch,
  +files/NVIDIA_glx-makefile.patch, +files/NVIDIA_i2c-hwmon.patch,
  +files/eblits/donvidia.eblit, +files/eblits/mtrr_check.eblit,
  +files/eblits/paravirt_check.eblit, +files/eblits/src_install-libs.eblit,
  +files/eblits/want_tls.eblit, +files/libGL.la-r2, +files/nvidia,
  +nvidia-drivers-180.41.ebuild:
  ebuild for nvidia's latest driver
