@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*nvidia-drivers-185.18.10 (19 May 2009)
+
+  19 May 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
+  +nvidia-drivers-185.18.10.ebuild:
+  new beta driver
+
 *nvidia-drivers-180.60 (14 May 2009)
 
   14 May 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
